--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "ejs": "^3.1.10",
     "emailjs": "^4.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.5.0",
     "fullcalendar": "^6.1.8",
+    "helmet": "^8.1.0",
     "jsdom": "^21.1.1",
     "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.4",
     "nodemailer": "^6.10.0",
